--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   web_socket_channel: ^2.4.0
   flutter_native_splash: ^2.2.3+1
   flutter_launcher_icons: ^0.12.0
+  image_picker: ^0.8.7+5
+  package_info_plus: ^3.1.2
   
 flutter_native_splash:
   image:  img/jobb.png
