--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: '>=2.18.5 <3.0.0'
@@ -48,6 +48,12 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   image_picker: ^0.8.7+5
   package_info_plus: ^3.1.2
+  flutter_secure_storage: ^8.0.0
+  chunked_uploader: ^1.0.0
+  file_picker: ^5.2.5
+  dio: ^4.0.6
+  # google_mobile_ads: ^1.2.0
+
   
 flutter_native_splash:
   image:  img/jobb.png
